--- a/hotnews/index.html
+++ b/hotnews/index.html
@@ -3,69 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>每日热门新闻（三方视角）</title>
+  <title>HotNews｜同一事件三方视角</title>
   <style>
-    body { font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"PingFang SC","Microsoft YaHei",sans-serif; margin:0; padding:24px; background:#0b1220; color:#e5e7eb; }
+    body { font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"PingFang SC","Microsoft YaHei",sans-serif; margin:0; padding:22px; background:#0b1220; color:#e5e7eb; }
     h1 { margin:0 0 8px; font-size:28px; }
-    .meta { color:#9ca3af; margin-bottom:20px; }
-    .grid { display:grid; grid-template-columns: repeat(auto-fit,minmax(320px,1fr)); gap:16px; }
-    .card { background:#111827; border:1px solid #1f2937; border-radius:14px; padding:14px; }
-    .card h2 { margin:0 0 10px; font-size:20px; }
-    ul { margin:0; padding-left:18px; }
-    li { margin:8px 0; line-height:1.4; }
+    .meta { color:#9ca3af; margin-bottom:16px; }
+    .card { background:#111827; border:1px solid #1f2937; border-radius:14px; padding:14px; margin-bottom:14px; }
+    .event { font-weight:700; margin-bottom:10px; color:#f9fafb; }
+    .grid { display:grid; grid-template-columns: repeat(3,minmax(220px,1fr)); gap:10px; }
+    .col { background:#0f172a; border:1px solid #1e293b; border-radius:10px; padding:10px; }
+    .col h3 { margin:0 0 6px; font-size:15px; color:#c7d2fe; }
+    .empty { color:#64748b; font-size:13px; }
     a { color:#93c5fd; text-decoration:none; }
     a:hover { text-decoration:underline; }
-    .err { color:#fca5a5; font-size:13px; margin-top:8px; }
+    @media (max-width:900px){ .grid{grid-template-columns:1fr;} }
   </style>
 </head>
 <body>
-  <h1>每日热门新闻（三方视角）</h1>
+  <h1>HotNews：同一新闻事件三方观点对比</h1>
   <div class="meta" id="meta">加载中...</div>
-  <div class="grid" id="grid"></div>
+  <div id="list"></div>
 
   <script>
-    async function loadNews() {
+    function renderItem(container, title, item){
+      const col = document.createElement('div');
+      col.className = 'col';
+      col.innerHTML = `<h3>${title}</h3>`;
+      if(item && item.link){
+        const p = document.createElement('div');
+        p.innerHTML = `<a href="${item.link}" target="_blank" rel="noreferrer">${item.title}</a>`;
+        col.appendChild(p);
+      }else{
+        const e = document.createElement('div');
+        e.className = 'empty';
+        e.textContent = '暂无匹配观点';
+        col.appendChild(e);
+      }
+      container.appendChild(col);
+    }
+
+    async function load(){
       const res = await fetch('./data/news.json?_=' + Date.now());
       const data = await res.json();
       document.getElementById('meta').textContent = `最后更新：${data.generated_at}（每日 08:00 自动更新）`;
 
-      const grid = document.getElementById('grid');
-      grid.innerHTML = '';
+      const list = document.getElementById('list');
+      list.innerHTML = '';
 
-      for (const [name, items] of Object.entries(data.sources || {})) {
+      const comps = data.comparisons || [];
+      if(!comps.length){
+        list.innerHTML = '<div class="card">暂无可对比事件，稍后自动更新。</div>';
+        return;
+      }
+
+      comps.forEach((c, idx) => {
         const card = document.createElement('div');
         card.className = 'card';
-        const h2 = document.createElement('h2');
-        h2.textContent = name;
-        card.appendChild(h2);
+        card.innerHTML = `<div class="event">事件 ${idx+1}：${c.event_hint}</div>`;
 
-        const ul = document.createElement('ul');
-        (items || []).forEach(it => {
-          const li = document.createElement('li');
-          li.innerHTML = `<a href="${it.link}" target="_blank" rel="noreferrer">${it.title}</a>`;
-          ul.appendChild(li);
-        });
-        card.appendChild(ul);
+        const grid = document.createElement('div');
+        grid.className = 'grid';
+        renderItem(grid, '中国视角', c['中国视角']);
+        renderItem(grid, '美国视角', c['美国视角']);
+        renderItem(grid, '伊斯兰视角（半岛）', c['半岛视角']);
 
-        if (!items || items.length === 0) {
-          const empty = document.createElement('div');
-          empty.className = 'err';
-          empty.textContent = '暂无数据';
-          card.appendChild(empty);
-        }
-
-        if (data.errors && data.errors[name]) {
-          const err = document.createElement('div');
-          err.className = 'err';
-          err.textContent = '抓取异常：' + data.errors[name];
-          card.appendChild(err);
-        }
-
-        grid.appendChild(card);
-      }
+        card.appendChild(grid);
+        list.appendChild(card);
+      });
     }
 
-    loadNews().catch(e => {
+    load().catch(e=>{
       document.getElementById('meta').textContent = '加载失败：' + e.message;
     });
   </script>
