--- a/hotnews/index.html
+++ b/hotnews/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HotNews｜同一事件三方视角</title>
+  <title>HotNews｜同一事件三方视角 / 3-View Comparison</title>
   <style>
     body { font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"PingFang SC","Microsoft YaHei",sans-serif; margin:0; padding:22px; background:#0b1220; color:#e5e7eb; }
     h1 { margin:0 0 8px; font-size:28px; }
@@ -20,8 +20,8 @@
   </style>
 </head>
 <body>
-  <h1>HotNews：同一新闻事件三方观点对比</h1>
-  <div class="meta" id="meta">加载中...</div>
+  <h1>HotNews：同一新闻事件三方观点对比 / Same Event, 3 Perspectives</h1>
+  <div class="meta" id="meta">加载中... / Loading...</div>
   <div id="list"></div>
 
   <script>
@@ -36,7 +36,7 @@
       }else{
         const e = document.createElement('div');
         e.className = 'empty';
-        e.textContent = '暂无匹配观点';
+        e.textContent = '暂无匹配观点 / No matched perspective';
         col.appendChild(e);
       }
       container.appendChild(col);
@@ -45,27 +45,27 @@
     async function load(){
       const res = await fetch('./data/news.json?_=' + Date.now());
       const data = await res.json();
-      document.getElementById('meta').textContent = `最后更新：${data.generated_at}（每日 08:00 自动更新）`;
+      document.getElementById('meta').textContent = `最后更新 / Last update: ${data.generated_at}（每日 08:00 自动更新 / Auto update at 08:00 daily）`;
 
       const list = document.getElementById('list');
       list.innerHTML = '';
 
       const comps = data.comparisons || [];
       if(!comps.length){
-        list.innerHTML = '<div class="card">暂无可对比事件，稍后自动更新。</div>';
+        list.innerHTML = '<div class="card">暂无可对比事件，稍后自动更新。 / No comparable events yet, please check back later.</div>';
         return;
       }
 
       comps.forEach((c, idx) => {
         const card = document.createElement('div');
         card.className = 'card';
-        card.innerHTML = `<div class="event">事件 ${idx+1}：${c.event_hint}</div>`;
+        card.innerHTML = `<div class="event">事件 / Event ${idx+1}：${c.event_hint}</div>`;
 
         const grid = document.createElement('div');
         grid.className = 'grid';
-        renderItem(grid, '中国视角', c['中国视角']);
-        renderItem(grid, '美国视角', c['美国视角']);
-        renderItem(grid, '伊斯兰视角（半岛）', c['半岛视角']);
+        renderItem(grid, '中国视角 / China', c['中国视角']);
+        renderItem(grid, '美国视角 / US', c['美国视角']);
+        renderItem(grid, '伊斯兰视角 / Islamic (Al Jazeera)', c['半岛视角']);
 
         card.appendChild(grid);
         list.appendChild(card);
@@ -73,7 +73,7 @@
     }
 
     load().catch(e=>{
-      document.getElementById('meta').textContent = '加载失败：' + e.message;
+      document.getElementById('meta').textContent = '加载失败 / Load failed: ' + e.message;
     });
   </script>
 </body>
